code compiles again, unmodified, isDefault in Value