@@ -4,14 +4,12 @@ import org.e2immu.analyzer.modification.linkedvariables.CommonTest;
 import org.e2immu.analyzer.modification.prepwork.variable.VariableData;
 import org.e2immu.analyzer.modification.prepwork.variable.VariableInfo;
 import org.e2immu.analyzer.modification.prepwork.variable.impl.VariableDataImpl;
-import org.e2immu.analyzer.modification.prepwork.variable.impl.VariableInfoImpl;
 import org.e2immu.language.cst.api.info.Info;
 import org.e2immu.language.cst.api.info.MethodInfo;
 import org.e2immu.language.cst.api.info.ParameterInfo;
 import org.e2immu.language.cst.api.info.TypeInfo;
 import org.e2immu.language.cst.api.statement.IfElseStatement;
 import org.e2immu.language.cst.api.statement.Statement;
-import org.e2immu.language.cst.impl.analysis.ValueImpl;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -46,19 +44,19 @@ public class TestLinkMerge extends CommonTest {
         MethodInfo setAdd = X.findUniqueMethod("setAdd", 2);
         VariableData vd = VariableDataImpl.of(setAdd);
         assertNotNull(vd);
-        ParameterInfo set = setAdd.parameters().get(0);
-        Statement s0 = setAdd.methodBody().statements().get(0);
-        Statement s000 = s0.block().statements().get(0);
+        ParameterInfo set = setAdd.parameters().getFirst();
+        Statement s0 = setAdd.methodBody().statements().getFirst();
+        Statement s000 = s0.block().statements().getFirst();
 
         VariableData vd000 = VariableDataImpl.of(s000);
         VariableInfo viSet000 = vd000.variableInfo(set);
-        assertTrue(viSet000.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, ValueImpl.BoolImpl.FALSE).isTrue());
+        assertFalse(viSet000.isUnmodified());
         assertEquals("0-4-*:s", viSet000.linkedVariables().toString());
 
         VariableData vd0 = VariableDataImpl.of(s0);
         VariableInfo viSet0 = vd0.variableInfo(set);
         assertEquals("0-4-*:s", viSet0.linkedVariables().toString());
-        assertTrue(viSet0.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, ValueImpl.BoolImpl.FALSE).isTrue());
+        assertFalse(viSet0.isUnmodified());
     }
 
 
@@ -92,11 +90,11 @@ public class TestLinkMerge extends CommonTest {
         MethodInfo setAdd = X.findUniqueMethod("setAdd", 2);
         VariableData vd = VariableDataImpl.of(setAdd);
         assertNotNull(vd);
-        ParameterInfo set = setAdd.parameters().get(0);
+        ParameterInfo set = setAdd.parameters().getFirst();
         {
             IfElseStatement s1 = (IfElseStatement) setAdd.methodBody().statements().get(1);
             {
-                Statement s110 = s1.elseBlock().statements().get(0);
+                Statement s110 = s1.elseBlock().statements().getFirst();
                 VariableData vd110 = VariableDataImpl.of(s110);
                 VariableInfo viI100 = vd110.variableInfo("i");
                 assertEquals("-1-:set", viI100.linkedVariables().toString());
@@ -114,33 +112,29 @@ public class TestLinkMerge extends CommonTest {
         {
             IfElseStatement s2 = (IfElseStatement) setAdd.methodBody().statements().get(2);
             {
-                Statement s200 = s2.block().statements().get(0);
+                Statement s200 = s2.block().statements().getFirst();
                 VariableData vd200 = VariableDataImpl.of(s200);
                 VariableInfo viI200 = vd200.variableInfo("i");
                 assertEquals("-1-:set, 0-4-*:t", viI200.linkedVariables().toString());
-                assertTrue(viI200.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE,
-                        ValueImpl.BoolImpl.FALSE).isTrue());
+                assertFalse(viI200.isUnmodified());
 
                 VariableInfo viSet200 = vd200.variableInfo(set);
                 assertEquals("-1-:i, 0-4-*:t", viSet200.linkedVariables().toString());
 
                 // test the propagation of the @Modified property via clustering
-                assertTrue(viSet200.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE,
-                        ValueImpl.BoolImpl.FALSE).isTrue());
+                assertFalse(viSet200.isUnmodified());
             }
             {
                 VariableData vd2 = VariableDataImpl.of(s2);
                 VariableInfo viI2 = vd2.variableInfo("i");
                 assertEquals("-1-:set, 0-4-*:t", viI2.linkedVariables().toString());
-                assertTrue(viI2.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE,
-                        ValueImpl.BoolImpl.FALSE).isTrue());
+                assertFalse(viI2.isUnmodified());
 
                 VariableInfo viSet2 = vd2.variableInfo(set);
                 assertEquals("-1-:i, 0-4-*:t", viSet2.linkedVariables().toString());
 
                 // test the propagation of the @Modified property via merge
-                assertTrue(viSet2.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE,
-                        ValueImpl.BoolImpl.FALSE).isTrue());
+                assertFalse(viSet2.isUnmodified());
             }
         }
     }
