@@ -67,7 +67,7 @@ public class TestModificationFunctional extends CommonTest {
         analyzer.doPrimaryType(X, analysisOrder);
 
         MethodInfo parse = X.findUniqueMethod("parse", 1);
-        assertSame(TRUE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(FALSE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
 
         MethodInfo run = X.findUniqueMethod("run", 2);
         ParameterInfo s = run.parameters().get(0);
@@ -76,38 +76,38 @@ public class TestModificationFunctional extends CommonTest {
             Statement s0 = run.methodBody().statements().get(0);
             VariableData vd0 = VariableDataImpl.of(s0);
             VariableInfo vi0S = vd0.variableInfo(s);
-            assertSame(FALSE, vi0S.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, FALSE));
+            assertTrue(vi0S.isUnmodified());
         }
         {
             Statement s1 = run.methodBody().statements().get(1);
             VariableData vd1 = VariableDataImpl.of(s1);
             VariableInfo vi1S = vd1.variableInfo(s);
-            assertSame(FALSE, vi1S.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, FALSE));
+            assertTrue(vi1S.isUnmodified());
             VariableInfo vi1Function = vd1.variableInfo(function);
-            assertSame(TRUE, vi1Function.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, FALSE));
+            assertFalse(vi1Function.isUnmodified());
         }
-        assertSame(FALSE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
-        assertSame(TRUE, function.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
-        assertSame(FALSE, s.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(TRUE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(FALSE, function.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(TRUE, s.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
 
         // finally, we copy the modification status of 'parse' onto 'this'
         MethodInfo go = X.findUniqueMethod("go", 1);
         {
-            Statement s0 = go.methodBody().statements().get(0);
+            Statement s0 = go.methodBody().statements().getFirst();
             VariableData vd0 = VariableDataImpl.of(s0);
             VariableInfo vi0This = vd0.variableInfo(runtime.newThis(X.asParameterizedType()));
-            assertSame(TRUE, vi0This.analysis().getOrDefault(VariableInfoImpl.MODIFIED_VARIABLE, FALSE));
+            assertFalse(vi0This.isUnmodified());
             // as a consequence, 'go' becomes modified
-            assertSame(TRUE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+            assertSame(FALSE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
         }
         {
             MethodInfo indirection = X.findUniqueMethod("indirection", 2);
             ParameterInfo iP1 = indirection.parameters().get(1);
-            assertSame(TRUE, iP1.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+            assertSame(FALSE, iP1.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
         }
         {
             MethodInfo goIndirection = X.findUniqueMethod("goWithIndirection", 1);
-            assertSame(TRUE, goIndirection.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+            assertSame(FALSE, goIndirection.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
         }
     }
 
@@ -152,10 +152,9 @@ public class TestModificationFunctional extends CommonTest {
         TypeInfo X = javaInspector.parse(INPUT2);
         List<Info> analysisOrder = prepWork(X);
         analyzer.doPrimaryType(X, analysisOrder);
-        TypeInfo R = X.findSubType("R");
 
         MethodInfo parse = X.findUniqueMethod("parse", 1);
-        assertSame(TRUE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(FALSE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
 
         MethodInfo run = X.findUniqueMethod("run", 2);
         ParameterInfo runS = run.parameters().get(0);
@@ -168,16 +167,16 @@ public class TestModificationFunctional extends CommonTest {
                     .getOrDefault(MODIFIED_FI_COMPONENTS_VARIABLE, EMPTY).toString());
         }
         {
-            assertSame(FALSE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+            assertSame(TRUE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
             assertEquals("this.function=true", runR.analysis().getOrNull(MODIFIED_FI_COMPONENTS_PARAMETER,
                     ValueImpl.VariableBooleanMapImpl.class).toString());
-            assertSame(FALSE, runR.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
-            assertSame(FALSE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+            assertSame(TRUE, runR.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+            assertSame(TRUE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
         }
         MethodInfo go = X.findUniqueMethod("go", 1);
-        assertSame(TRUE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
-        ParameterInfo goIn = go.parameters().get(0);
-        assertSame(FALSE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(FALSE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        ParameterInfo goIn = go.parameters().getFirst();
+        assertSame(TRUE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
     }
 
     @Language("java")
@@ -212,7 +211,6 @@ public class TestModificationFunctional extends CommonTest {
         TypeInfo X = javaInspector.parse(INPUT2b);
         List<Info> analysisOrder = prepWork(X);
         analyzer.doPrimaryType(X, analysisOrder);
-        TypeInfo R = X.findSubType("R");
 
         MethodInfo parse = X.findUniqueMethod("parse", 1);
         assertSame(TRUE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
@@ -227,14 +225,14 @@ public class TestModificationFunctional extends CommonTest {
                     .getOrDefault(MODIFIED_FI_COMPONENTS_VARIABLE, EMPTY).toString());
         }
 
-        assertSame(FALSE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(TRUE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
         assertEquals("this.r.function=true", runS.analysis().getOrNull(MODIFIED_FI_COMPONENTS_PARAMETER,
                 ValueImpl.VariableBooleanMapImpl.class).toString());
-        assertSame(FALSE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(TRUE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
 
         MethodInfo go = X.findUniqueMethod("go", 1);
         {
-            Statement s0 = go.methodBody().statements().get(0);
+            Statement s0 = go.methodBody().statements().getFirst();
             VariableData vd0 = VariableDataImpl.of(s0);
             VariableInfo vi0R = vd0.variableInfo("r");
             assertEquals("Type a.b.X.R E=new R(this::parse) this.function=this::parse",
@@ -251,9 +249,9 @@ public class TestModificationFunctional extends CommonTest {
             assertEquals("Type a.b.X.S E=new S(r) this.r=r", vi1S.staticValues().toString());
         }
 
-        assertSame(TRUE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
-        ParameterInfo goIn = go.parameters().get(0);
-        assertSame(FALSE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(FALSE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        ParameterInfo goIn = go.parameters().getFirst();
+        assertSame(TRUE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
     }
 
 
@@ -268,12 +266,12 @@ public class TestModificationFunctional extends CommonTest {
                     @GetSet Function<String, Integer> function();
                 }
                 record RImpl(Function<String, Integer> function) implements R {}
-    
+            
                 interface S {
                     @GetSet R r();
                 }
                 record SImpl(R r) implements S {}
-    
+            
                 int j;
             
                 int go(String in) {
@@ -310,11 +308,11 @@ public class TestModificationFunctional extends CommonTest {
         assertTrue(rInSImpl.overrides().contains(rInS));
 
         MethodInfo parse = X.findUniqueMethod("parse", 1);
-        assertSame(TRUE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(FALSE, parse.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
 
         MethodInfo go = X.findUniqueMethod("go", 1);
         {
-            Statement s0 = go.methodBody().statements().get(0);
+            Statement s0 = go.methodBody().statements().getFirst();
             VariableData vd0 = VariableDataImpl.of(s0);
             VariableInfo vi0R = vd0.variableInfo("r");
             assertEquals("Type a.b.X.RImpl E=new RImpl(this::parse) this.function=this::parse",
@@ -341,15 +339,14 @@ public class TestModificationFunctional extends CommonTest {
                     .getOrDefault(MODIFIED_FI_COMPONENTS_VARIABLE, EMPTY).toString());
         }
 
-        assertSame(FALSE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(TRUE, runS.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
         assertEquals("this.r.function=true", runS.analysis().getOrNull(MODIFIED_FI_COMPONENTS_PARAMETER,
                 ValueImpl.VariableBooleanMapImpl.class).toString());
-        assertSame(FALSE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        assertSame(TRUE, run.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
 
 
-
-        assertSame(TRUE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
-        ParameterInfo goIn = go.parameters().get(0);
-        assertSame(FALSE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
+        assertSame(FALSE, go.analysis().getOrDefault(PropertyImpl.NON_MODIFYING_METHOD, FALSE));
+        ParameterInfo goIn = go.parameters().getFirst();
+        assertSame(TRUE, goIn.analysis().getOrDefault(PropertyImpl.UNMODIFIED_PARAMETER, FALSE));
     }
 }
